# rust-news-topic-aggregator

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  mo_news.csv  some_news.csv
history/: Elon Musk_en.csv  Elon_en.csv  India_en.csv  Rust_en.csv  as_en.csv  bangladesh_en.csv  elonmusk_en.csv  exit_en.csv  some_en.csv  vscode_en.csv  yunus_en.csv
src/: main.rs  process_text.rs  rubix.rs  search_news.rs
src/utils/: get_env.rs  mod.rs  spinner.rs
