[package]
name = "rust-news-topic-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
csv = "1.1"
openai = { version = "1.0.0-alpha.15" }  # For summary and named entity extraction, or use another API/library
rust-bert = "0.16.0"
nlprule = "0.6.4"
dotenv = "0.15"
env_logger = "0.9"
anyhow = "1.0"
log = "0.4"